--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode development",
-    "dev": "webpack-dev-server --mode development --open --hot"
+    "dev": "webpack-dev-server --mode development --open"
   },
   "author": "",
   "license": "ISC",
