--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-        "styled-jsx/babel"
-    ]
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
